# indiscriminant

./: Cargo.toml  README.md
impl/: Cargo.toml
impl/src/: lib.rs
impl_bits/: Cargo.toml
impl_bits/src/: lib.rs
impl_byte_str/: Cargo.toml
impl_byte_str/src/: lib.rs
impl_str/: Cargo.toml
impl_str/src/: lib.rs
indiscriminant_impl/: Cargo.toml
indiscriminant_impl/src/: lib.rs
indiscriminant_impl_bits/: Cargo.toml
indiscriminant_impl_byte_str/: Cargo.toml
indiscriminant_impl_byte_str/src/: lib.rs
indiscriminant_impl_str/: Cargo.toml
indiscriminant_impl_str/src/: lib.rs
indiscriminant_lib/: Cargo.toml
indiscriminant_lib/src/: indiscriminant_bits.rs  indiscriminant_byte_str.rs  indiscriminant_str.rs  lib.rs
src/: lib.rs
tests/: tests.rs
